cabal-version:      3.0
name:               aoc22
version:            0.1.0.0

license:            MIT
license-file:       LICENSE
author:             Jason Chen
maintainer:         chezbgone@gmail.com

build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings

    hs-source-dirs:   src

    exposed-modules:
        Day01,
        Day02,
        Day03,
        Day04,
        Day05,
        Day06,
        Day07,
        Day08,
        Day09,
        Day10,
        Day11,
        Day12,

    build-depends:
        base ^>=4.17.0.0,
        containers ^>=0.6.6,
        megaparsec ^>=9.3.0,
        mtl ^>=2.3.1,
        split ^>=0.2.3.5,
        text ^>=2.0.1,
        vector ^>=0.13.0.0,

    default-language: GHC2021

executable aoc22
    import:           warnings

    hs-source-dirs:   exe

    main-is:          Main.hs

    build-depends:
        base ^>=4.17.0.0,
        text ^>=2.0.1,
        aoc22

    default-language: GHC2021
